fix: update user service schema

--- a/graphql-gateway/codegen.yml
+++ b/graphql-gateway/codegen.yml
@@ -22,4 +22,5 @@ generates:
         enumValues: upper-case#upperCase
       mappers:
         Product: ./services/product/models#Product
+        User: ./services/user/models#User
         ProductsConnection: ./services/product/models#ProductsConnection
