--- a/services/user.yml
+++ b/services/user.yml
@@ -35,7 +35,7 @@ components:
       properties:
         id:
           type: integer
-        title:
+        name:
           type: string
         product_ids:
           type: array
