Revert "fix: update user service schema"
This reverts commit a15540b8c513dd6615e1323aa0671c2c96f800f5.

--- a/services/user.yml
+++ b/services/user.yml
@@ -35,7 +35,7 @@ components:
       properties:
         id:
           type: integer
-        name:
+        title:
           type: string
         product_ids:
           type: array
