--- a/services/search.yml
+++ b/services/search.yml
@@ -21,9 +21,14 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/SearchResult"
+                type: object
+                properties:
+                  total_count:
+                    type: integer
+                  search_results:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/SearchResult"
 components:
   schemas:
     SearchResult:
