--- a/services/package.json
+++ b/services/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "nodemon": "^2.0.18",
+    "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   }
 }
