chore: update dependencies

--- a/graphql-gateway/codegen.yml
+++ b/graphql-gateway/codegen.yml
@@ -23,3 +23,5 @@ generates:
       mappers:
         Product: ./services/product/models#Product
         ProductsConnection: ./services/product/models#ProductsConnection
+      scalars:
+        ID: string
