--- a/graphql-gateway/package.json
+++ b/graphql-gateway/package.json
@@ -21,7 +21,13 @@
   "homepage": "https://github.com/unitedwardrobe/graphql-gateway-workshop#readme",
   "jest": {
     "transform": {
-      "^.+\\.tsx?$": "ts-jest"
+      "^.+\\.tsx?$": [
+        "ts-jest",
+        {
+          "tsconfig": "tsconfig.json",
+          "diagnostics": true
+        }
+      ]
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.ts$",
     "coverageReporters": [
@@ -35,41 +41,35 @@
       "js",
       "json",
       "node"
-    ],
-    "globals": {
-      "ts-jest": {
-        "tsconfig": "tsconfig.json",
-        "diagnostics": true
-      }
-    }
+    ]
   },
   "dependencies": {
-    "@graphql-tools/load-files": "^6.6.0",
-    "@graphql-tools/merge": "^8.3.0",
-    "@graphql-tools/schema": "^8.5.0",
+    "@graphql-tools/load-files": "^7.0.0",
+    "@graphql-tools/merge": "^9.0.0",
+    "@graphql-tools/schema": "^10.0.0",
     "apollo-server-express": "^3.9.0",
-    "axios": "^0.27.2",
-    "dataloader": "^2.1.0",
-    "express": "^4.18.1",
-    "graphql": "^16.5.0"
+    "axios": "^1.4.0",
+    "dataloader": "^2.2.2",
+    "express": "^4.18.2",
+    "graphql": "^16.6.0"
   },
   "devDependencies": {
-    "@graphql-codegen/add": "^3.1.1",
-    "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/typescript": "^2.5.1",
-    "@graphql-codegen/typescript-operations": "^2.4.2",
-    "@graphql-codegen/typescript-resolvers": "^2.6.6",
-    "@types/jest": "^28.1.3",
-    "@types/node": "^18.0.0",
-    "axios-mock-adapter": "^1.21.1",
-    "eslint": "^8.18.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.1.0",
-    "jest": "^28.1.2",
-    "nodemon": "^2.0.18",
-    "prettier": "^2.7.1",
-    "ts-jest": "^28.0.5",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.4"
+    "@graphql-codegen/add": "^5.0.0",
+    "@graphql-codegen/cli": "^4.0.1",
+    "@graphql-codegen/typescript": "^4.0.0",
+    "@graphql-codegen/typescript-operations": "^4.0.0",
+    "@graphql-codegen/typescript-resolvers": "^4.0.0",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.2.5",
+    "axios-mock-adapter": "^1.21.4",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   }
 }
